# partycle--

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench.sh  coordinate_indexer.cpp  coordinate_indexer.h  domain.cpp  domain.h  main.cpp  makefile  particle_generation.cpp  particle_generation.h  run.py  superellipsoid.cpp  superellipsoid.h  test.cpp
include/: matplotlibcpp.h  utils.hpp
src/: benchmark.cpp  coordinate_indexer.cpp  coordinate_indexer.hpp  domain.cpp  domain.hpp  main.cpp  matplotlibcpp.h  particle_generation.cpp  particle_generation.hpp  program_options.cpp  program_options.hpp  superellipsoid.cpp  superellipsoid.hpp  utils.cpp  utils.hpp
tests/: example_particle_distributions.csv
